--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         />
         <dialog id="dialog" class="dialog__one">
           <form action="#" method="dialog">
-            <button type="submit">Close</button>
+            <button id="close__One" type="submit">Close</button>
           </form>
           <img src="images/picture1.jpeg" alt="picture1" />
 
@@ -131,7 +131,7 @@
         />
         <dialog id="dialog" class="dialog__one">
           <form action="#" method="dialog">
-            <button type="submit">Close</button>
+            <button id="close__Two" type="submit">Close</button>
           </form>
           <img src="images/picture1.jpeg" alt="picture1" />
 
@@ -153,7 +153,7 @@
         />
         <dialog id="dialog" class="dialog__one">
           <form action="#" method="dialog">
-            <button type="submit">Close</button>
+            <button id="close__Three" type="submit">Close</button>
           </form>
           <img src="images/picture1.jpeg" alt="picture1" />
 
@@ -176,7 +176,7 @@
         />
         <dialog id="dialog" class="dialog__one">
           <form action="#" method="dialog">
-            <button type="submit">Close</button>
+            <button id="close__Four type="submit">Close</button>
           </form>
           <img src="images/picture1.jpeg" alt="picture1" />
 
@@ -193,7 +193,7 @@
 
       <section class="section__four">
         <h2 class="section__four__title">Contact</h2>
-        <form action="#">
+        <form action="" id="form">
           <input type="text" name="name" id="name" placeholder="Name" />
           <input type="email" name="email" id="email" placeholder="Email" />
           <input
